Updated some things, added projects section

--- a/cv-llt.tex
+++ b/cv-llt.tex
@@ -57,10 +57,7 @@
 
 \makerubric{employment}
 \makerubric{education}
-
+\makerubric{projects}
 \makerubric{skills}
-
-% \makerubric{referee}
-% \input{referee-full}
 
 \end{document}
