--- a/education.tex
+++ b/education.tex
@@ -1,13 +1,14 @@
 \begin{rubric}{Education}
-\entry*[Sep. 2022. -- $\cdots\cdots\cdots$]%
+	\entry*[Sep. 2022. -- $\cdots\cdots\cdots$]%
 	\textbf{Master's degree} in Applied Computer Engineering \par \textbf{Algebra University College} in Zagreb, Croatia.
-	\par Thesis title: \emph{tba}.
-%
-\entry*[Oct. 2019. -- Sep. 2022.]%
+	\par Thesis title: \emph{Development of warehouse management system with advanced controls and demand forecasting}.
+	%
+	\entry*[Oct. 2019. -- Sep. 2022.]%
 	\textbf{Bachelor's degree} in Computer Engineering \par \textbf{Virovitica University Of Applied Sciences} in Virovitica, Croatia.\par
 	Thesis title: \emph{Development of the server part of the application using the node ecosystem}.
-% 
-\entry*[Sep. 2015. -- May. 2019.]%
+	\par Link to thesis: https://dabar.srce.hr/islandora/object/vsmti%3A754.
+	% 
+	\entry*[Sep. 2015. -- May. 2019.]%
 	\textbf{High School Diploma} in Electrical Engineering \par \textbf{High School Marka Marulića} in Slatina, Croatia.\par
 	Thesis title: \emph{Arduino robot}.
 \end{rubric}
