--- a/skills.tex
+++ b/skills.tex
@@ -12,7 +12,7 @@
 	\entry*[Web Dev]
 	HTML, CSS, JavaScript, React.Js, TypeScript, Node.js, Blazor, ASP.NET MVC.
 	\entry*[Tools.]
-	Git, Jira, Confluence, Swagger API.
+	Git, Jira, Confluence, Swagger API, JWT.
 	\entry*[Misc.]
 	Scrum knowledge, Team player, Communicative.
 \end{rubric}
