fixed link to thesis, redid some parts to be written in present, and added some new thing I learned

--- a/education.tex
+++ b/education.tex
@@ -6,7 +6,7 @@
 	\entry*[Oct. 2019. -- Sep. 2022.]%
 	\textbf{Bachelor's degree} in Computer Engineering \par \textbf{Virovitica University Of Applied Sciences} in Virovitica, Croatia.\par
 	Thesis title: \emph{Development of the server part of the application using the node ecosystem}.
-	\par Link to thesis: https://dabar.srce.hr/islandora/object/vsmti%3A754.
+	\par Link to thesis: \url{https://dabar.srce.hr/islandora/object/vsmti%3A754}
 	% 
 	\entry*[Sep. 2015. -- May. 2019.]%
 	\textbf{High School Diploma} in Electrical Engineering \par \textbf{High School Marka Marulića} in Slatina, Croatia.\par
