--- a/employment.tex
+++ b/employment.tex
@@ -5,10 +5,10 @@
 	\par Responsibilities:
 	\begin{list}{\labelitemi}{\leftmargin=0pt \itemindent=1em}
 		\item Played a key role in integrating NIAS with government registries, expanding the service range, leading system integration to ensure seamless transitions and new version deployments, and providing technical support for uninterrupted NIAS operation.
-		\item Collaborated as an eIDAS expert to facilitate foreign user access and ensure cross-border service continuity via direct communication with foreign member states.
-		\item Maintained and enhanced the codebase for system reliability and security.
-		\item Conducted development assessments to estimate resource requirements and mentored students to pass on knowledge and expertise.
-		\item Managed several small projects, including communication validation for Croatian banks, the internal phone registry for FINA, and FINA's job application website.
+		\item Collaborating as an eIDAS expert to facilitate foreign user access and ensure cross-border service continuity via direct communication with foreign member states.
+		\item Maintaining and enhancing the codebase for system reliability and security.
+		\item Conducting development assessments to estimate resource requirements and mentoring several students to pass on knowledge and expertise.
+		\item Managing several small projects, including communication validation for Croatian banks, the internal phone registry for FINA, and FINA's job application website.
 	\end{list}
 	%
 	\entry*[May. 2021 -- Oct. 2022.]%
@@ -16,7 +16,7 @@
 	\textbf{Student Job - Software Engineer} in Virovitica, Croatia.
 	\par Responsibilities:
 	\begin{list}{\labelitemi}{\leftmargin=0pt \itemindent=1em}
-		\item Developed a feature-rich app in Blazor technology for students that is now used daily by all students in FINA, created a responsive, user-friendly frontend that is used as an interface to track work hours, log daily activities, enhance the students and mentors user experience,  handled both frontend and backend development, contributing to core application elements and REST API development.
+		\item Developed a feature-rich app in Blazor technology for students that is now used daily by all students in FINA, created a responsive, user-friendly frontend that is used as an interface to track work hours, log daily activities, enhance the students and mentors user experience, handled both frontend and backend development, contributing to core application elements and REST API development.
 		\item Made frontend and backend adjustments for Info.BIZ, including changes in the presentation of blockades for bank accounts and contributed to the creation of a REST API for package purchases within the Info.BIZ application.
 		\item Gained experience in full-stack development, microservices architecture, and REST API creation.
 	\end{list}
