--- a/skills.tex
+++ b/skills.tex
@@ -14,5 +14,5 @@
 	\entry*[Tools.]
 	Git, Jira, Confluence, Swagger API, JWT.
 	\entry*[Misc.]
-	Scrum knowledge, Team player, Communicative.
+	OIDC protocol knowledge, Scrum knowledge, Team player, Communicative.
 \end{rubric}
